<resources>
    <string name="app_name">Moyee</string>

    <string name="register">회원가입</string>
    <string name="login">로그인</string>
    <string name="next">다음</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="passsword_check">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="nickname">닉네임</string>
    <string name="choice_category">덕질 분야를 선택해주세요!</string>
    <string name="k_pop">K-POP</string>
    <string name="animation">애니메이션</string>
    <string name="input_interested_keyword">관심 키워드를 입력해주세요.</string>
    <string name="category_etc">등등</string>
    <string name="keyword">키워드</string>
    <string name="recent_add_keyword">요즘 많이 추가하는 키워드는?</string>
    <string name="photo">photo</string>
    <string name="profile_image">profileImage</string>
    <string name="search">search</string>
</resources>